Update home page visual design to Phase 2.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1394 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -12,7 +12,8 @@
                           >Plant Identifier</a> |
                         <a href="{% if ':8000' in request.META.HTTP_HOST %}http://127.0.0.1:8001/{% else %}https://myplants.newfs.org/{% endif %}">MyPlants</a> |
                         <a href="/advanced/">Advanced ID Tools</a> |
-                        <a href="#">About</a></p>
+                        <a href="/help/">About</a> |
+                        <a href="/help/glossary/">Glossary</a></p>
                     <h6>Legal</h6>
                     <p><a href="#">Privacy Policy</a> |
                         <a href="#">Terms of Use</a></p>
