--- a/gobotany/simplekey/templates/simplekey/_header.html
+++ b/gobotany/simplekey/templates/simplekey/_header.html
@@ -11,8 +11,7 @@
                 England Wild Flower Society</a></h2>
             <h1><a 
                 {% ifnotequal request.path "/" %}href="/"{% endifnotequal %}>Go
-                Botany features thousands of native New England plants for you
-                to learn and explore</a></h1>
+                Botany: Discover thousands of New England plants</a></h1>
             <nav>
                 <div id="search">
                     <form id="search-suggest" action="/search" autocomplete="off">
