--- a/gobotany/static/css/basic.css
+++ b/gobotany/static/css/basic.css
@@ -2,63 +2,53 @@
 /* Basic Styles */
 /*////////////////////////////////*/
 body {
+	color: #000;
     font-family: Verdana, Geneva, sans-serif;
-    font-size: 11px;
-    color: #1a2e11;
-    background: ;
+	font-size: 12px;
 }
 
 a {
-    color: #6eae3e;
-    text-decoration: none;
+	color: #508e31;
+	text-decoration: none;
 }
-
+	
 a:hover {
-    text-decoration: underline;
+	text-decoration: underline;
 }
-
+	
 p {
-    line-height: 170%;
+	line-height: 170%;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Trebuchet MS", Trebuchet, Arial, Helvetica, sans-serif;
-    font-weight: normal;
-    line-height: 155%;
-}
-
-h1 {
-    
+	font-family: "Trebuchet MS", Trebuchet, Arial, Helvetica, sans-serif;
+	font-weight: normal;
+	line-height: 155%;
 }
 
 h2 {
-    font-size: 35px;
+	font-size: 35px;
 }
 h3 {
-    font-size: 24px;
+	font-size: 24px;	
 }
 h4 {
-    font-size: 18px;
+	font-size: 18px;	
 }
 h5 {
-    font-size: 14px;
+	font-size: 14px;	
 }
 h6 {
-    font-size: 12px;
-}
-hr {
-}
-
-ol {
-}
-
-ol li {
-}
-
-ul {
+	font-size: 12px;	
 }
 
 ul li {
-    margin: 0 0 5px 0;
+	margin: 0 0 5px 0;
 }
-    
+
+img.icon {
+	margin: 0 3px 0 0;
+	vertical-align: -2px;	
+}
+	
+
