Update the first-level Plant Identifier visual design to Phase 2.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1400 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_sidebar_items.html
+++ b/gobotany/simplekey/templates/simplekey/_sidebar_items.html
@@ -4,8 +4,8 @@
                         <a class="get-help-btn" href="/help/start/">Get Help</a>
                     </div>
 
-                    <div class="section">
-                        <h5>Plant Map</h5>
+                    <div class="section plant-map">
+                        <h5>Shortcut to Groups!</h5>
                         <p>If you already know what group your plant is in, start with the clickable plant map to find your plant more quickly.</p>
                         <a class="view-map-btn" href="/map/">View Map</a>
                     </div>
