Update the second-level Plant Identifier visual design to Phase 2.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1401 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_plant_not_in_subgroup.html
+++ b/gobotany/simplekey/templates/simplekey/_plant_not_in_subgroup.html
@@ -7,5 +7,5 @@
                             {% endif %}
                         </h6>
                         <a class="back-level"
-                            href="{{ parent_page.get_absolute_url }}">Go back one level</a>
-                    </div><!--Closes .not-my-plant-->
+                            href="{{ parent_page.get_absolute_url }}">&laquo; Take me back a level.</a>
+                    </div>
