On the pile/results page, move the introductory instructions to a closable box, for visual design Phase 2.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1403 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -39,15 +39,22 @@
                     <h3>{{ pile.name }} 
                         (<span class="species-count">calculating</span> 
                         matching species)</h3>
-                    <h6 class="subtitle"><em>Narrow down your results 
-                            using the options on the left side of the 
-                            page.</em></h6>
-                        <div class="clearit"></div>
-
+                                                
                         <div class="working-area" aria-live="polite" 
                             aria-relevant="additions removals">
+                            <img class="arrow" alt=""
+                                src="/static/images/layout/working-area-arrow.png">
                             <a href="#" class="close"></a>
-                            <h4>Leaf Arrangement</h4>
+
+                            <div class="intro-message">
+				    	        <h4>Narrow Your Search</h4>
+                                <p>Click on one of the features in the list
+                                to the left. A question about that feature
+                                will appear here. Choose the answer that most
+                                closely matches your plant.</p>
+    				        </div>
+                            
+                            <h4></h4>
                             <div>
                                 <div class="info">
                                     <div class="question"></div>
